blocks/header.css
.header {
  padding: 30px 80px 40px;
  min-height: 720px;
  max-height: 800px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  background-color: #fff;
  background-image: url(../images/background_header.svg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
}

.header__title {
  max-width: 729px;
  margin: 183px 0 28px;
  font-size: 60px;
  line-height: 72px;
  font-family: "Inter", Arial, sans-serif;
  font-weight: 500;
  letter-spacing: -0.6px;
  z-index: 2;
}

.header__span-accent {
  font-family: "Noto Serif", "Times New Roman", serif;
  font-style: italic;
  font-weight: normal;
  color: #2f80ed;
  display: block;
}

.header__description {
  max-width: 683px;
  margin: 0;
  font-family: "Noto Serif", "Times New Roman", serif;
  font-size: 20px;
  line-height: 30px;
  z-index: 2;
}

.header__image {
  width: 646px;
  height: 568px;
  position: absolute;
  right: 5px;
  top: 124px;
}

.header__footer {
  display: flex;
  justify-content: space-between;
  margin-top: auto;
  font-family: "Inter", Arial, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #838383;
  align-items: center;
}

.header__paragraph {
  margin: 0;
}

